Add Google Adwords Page

--- a/404.html
+++ b/404.html
@@ -51,15 +51,15 @@
                 <a href="#top" onclick=$("#menu-close").click();>Home</a>
             </li>
             <li>
-                <a href="#about" onclick=$("#menu-close").click();>About</a>
+                <a href="/#about" onclick=$("#menu-close").click();>About</a>
             </li>
             <li>
-                <a href="#projects" onclick=$("#menu-close").click();>Projects</a>
+                <a href="/#projects" onclick=$("#menu-close").click();>Projects</a>
             </li>
         </ul>
     </nav>
 
-<section id="services" class="services bg-primary">
+    <section id="services" class="services bg-primary">
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
@@ -78,7 +78,7 @@
     
 
     <!-- About -->
-    <section id="about" class="about">
+    <section id="404" class="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-3 text-center">
