--- a/google-adwords-exam-help.html
+++ b/google-adwords-exam-help.html
@@ -82,7 +82,7 @@
     </header>
 
     <!-- About -->
-    <section id="about" class="about">
+    <section id="adwords" class="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
