--- a/machine-learning.html
+++ b/machine-learning.html
@@ -51,10 +51,10 @@
                 <a href="#top" onclick=$("#menu-close").click();>Home</a>
             </li>
             <li>
-                <a href="#about" onclick=$("#menu-close").click();>About</a>
+                <a href="/#about" onclick=$("#menu-close").click();>About</a>
             </li>
             <li>
-                <a href="#projects" onclick=$("#menu-close").click();>Projects</a>
+                <a href="/#projects" onclick=$("#menu-close").click();>Projects</a>
             </li>
         </ul>
     </nav>
@@ -70,7 +70,7 @@
     </header>
 
     <!-- About -->
-    <section id="about" class="about">
+    <section id="machine-learning" class="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
