Update webpage titles

--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="http://www.dudonwai.com/">
     <meta property="og:image" content="http://www.dudonwai.com/img/bg.png">
 
-    <title>404 - Not Found</title>
+    <title>Dudon Wai | 404 - Not Found</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
