--- a/google-adwords-exam-help.html
+++ b/google-adwords-exam-help.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="http://www.dudonwai.com/google-adwords-exam-help">
     <meta property="og:image" content="http://www.dudonwai.com/img/google-adwords-logo.jpg">
 
-    <title>Google AdWords Exam Help - SEO, SEM, Marketing</title>
+    <title>Dudon Wai | Google AdWords Exam Help</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
@@ -89,8 +89,8 @@
                     <h2>What is Google AdWords?</h2>
                     <span><img 
                         src="img/google-logo.jpg"
-                        height="175" 
-                        width="375">
+                        height="117" 
+                        width="250">
                         </span>
                     <div class="col-lg-6 col-lg-offset-3">
                         <p>Google AdWords helps boost your website traffic by advertising your business right when your audience is already engaged -  searching for or browsing similar content.</p>
