--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="http://www.dudonwai.com/">
     <meta property="og:image" content="http://www.dudonwai.com/img/bg.png">
 
-    <title>Dudon Wai</title>
+    <title>Dudon Wai | Startups, Product, Personal Growth</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
