--- a/machine-learning.html
+++ b/machine-learning.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="http://www.dudonwai.com/">
     <meta property="og:image" content="http://www.dudonwai.com/img/bg.png">
 
-    <title>Dudon Wai</title>
+    <title>Dudon Wai | Machine Learning</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
