--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
             <li>
                 <a href="#projects" onclick=$("#menu-close").click();>Projects</a>
             </li>
+            <li>
+                <a href="#blog" onclick=$("#menu-close").click();>Blog</a>
+            </li>
         </ul>
     </nav>
 
@@ -87,6 +90,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Engineer ~ Programmer ~ Marketer</h2>
+                    <hr class="small"
                     <span><img 
                         class="img-circle"
                         src="img/dudon-wai.jpg"
@@ -136,7 +140,7 @@
                                     <strong>Marketing Firm</strong>
                                 </h4>
                                 <p>Supporting local SMBs with online advertising primarily on Google &amp; Facebook</p>
-                                <a href="google-adwords-exam-help" class="btn btn-light">Learn More</a>
+                                <a href="/marketing/google-adwords-exam-help" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -174,9 +178,33 @@
         </div>
         <!-- /.container -->
     </section>
+
+    <!-- About -->
+    <section id="blog" class="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>On Startups, Product and Personal Growth</h2>
+                    <hr class="small">
+                    <h4><strong>Why I Experiment Every Day</strong></h4>
+                </div>
+                <div class="col-lg-6 col-lg-offset-3">
+                    <p>Every day, I try to find at least three experiments I can do. Will a cold shower in the morning wake me up more than a warm one? Do I eat more in a day if I have a big breakfast or a small one? Do I focus at work better with music or without?</p>
+                    <p>I’ve experimented with many things to do with my diet, fitness, productivity and relationships. I learned that I wake up best with just two alarms spaced 10 minutes apart; no need for ten alarms or placing my alarm clock at the other end of the room. I learned that when exercising, I run better to podcasts and lift better to house or trance music. I learned that when I talk to people...</p>
+                </div>
+                <div class="col-lg-12 text-center">
+                    <a href="https://blog.greyadv.com/why-i-experiment-every-day-1f07e33cb872#.97bp39k5e" class="btn btn-dark btn-lg">Continue Reading</a>
+                </div>
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+
     <!-- Footer -->
     <footer>
         <div class="container">
+            <hr class="large">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <ul class="list-inline">
@@ -196,7 +224,6 @@
                             <a href="https://medium.com/@dudonwai" target="_blank"><i class="fa fa-medium fa-fw fa-3x"></i></a>
                         </li>                   
                     </ul>
-                    <hr class="small">
                     <p class="text-muted">Dudon Wai ~ 2016</p>
                 </div>
             </div>
