Update blog, mktg, ai

--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#top" onclick=$("#menu-close").click();>Dudon Wai</a>
+                <a href="#top" onclick=$("#menu-close").click();><strong>Dudon Wai</strong></a>
             </li>
             <li>
-                <a href="#top" onclick=$("#menu-close").click();>Home</a>
+                <a href="#top" onclick=$("#menu-close").click();><strong>Home</strong></a>
             </li>
             <li>
-                <a href="#about" onclick=$("#menu-close").click();>About</a>
+                <a href="#about" onclick=$("#menu-close").click();><strong>About</strong></a>
             </li>
             <li>
-                <a href="#projects" onclick=$("#menu-close").click();>Projects</a>
+                <a href="#projects" onclick=$("#menu-close").click();><strong>Projects</strong></a>
             </li>
             <li>
-                <a href="#blog" onclick=$("#menu-close").click();>Blog</a>
+                <a href="#blog" onclick=$("#menu-close").click();><strong>Blog</strong></a>
             </li>
         </ul>
     </nav>
@@ -78,7 +78,6 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <h1>Hi, I'm Dudon</h1>
-            <h3></h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Check Out My Projects</a>
         </div>
@@ -90,7 +89,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Engineer ~ Programmer ~ Marketer</h2>
-                    <hr class="small"
+                    <hr class="small">
                     <span><img 
                         class="img-circle"
                         src="img/dudon-wai.jpg"
@@ -184,20 +183,42 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>On Startups, Product and Personal Growth</h2>
+                    <h2>Dudon's Blog</h2>
+                    <h4>On Startups, Product and Personal Growth</h4>
                     <hr class="small">
-                    <h4><strong>Why I Experiment Every Day</strong></h4>
                 </div>
-                <div class="col-lg-6 col-lg-offset-3">
-                    <p>Every day, I try to find at least three experiments I can do. Will a cold shower in the morning wake me up more than a warm one? Do I eat more in a day if I have a big breakfast or a small one? Do I focus at work better with music or without?</p>
-                    <p>I’ve experimented with many things to do with my diet, fitness, productivity and relationships. I learned that I wake up best with just two alarms spaced 10 minutes apart; no need for ten alarms or placing my alarm clock at the other end of the room. I learned that when exercising, I run better to podcasts and lift better to house or trance music. I learned that when I talk to people...</p>
-                </div>
-                <div class="col-lg-12 text-center">
-                    <a href="https://blog.greyadv.com/why-i-experiment-every-day-1f07e33cb872#.97bp39k5e" class="btn btn-dark btn-lg">Continue Reading</a>
+            </div>
+
+            <!-- Blog Post Row -->
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1">
+                    
+                    <div class="col-md-2 text-center">
+                        <p><i class="fa fa-camera fa-3x"></i>
+                        </p>
+                        <p>July 24, 2016</p>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="/blog/2016/why-i-experiment-every-day"
+                            <img class="img-responsive img-hover" src="http://placehold.it/600x300" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>
+                            <a href="/blog/2016/why-i-experiment-every-day">Why I Experiment Every Day</a>
+                        </h3>
+                        <p>via <a href="https://blog.greyadv.com/why-i-experiment-every-day-1f07e33cb872#.97bp39k5e">@dudonwai</a>
+                        </p>
+                        <p>Every day, I try to find at least three experiments I can do. Will a cold shower in the morning wake me up more than a warm one? Do I eat more in a day if I have a big breakfast or a small one? Do I focus at work better with music or without?</p>
+                        <p>I’ve experimented with many things to do with my diet, fitness, productivity and relationships. I learned that...</p>
+                        <a class="btn btn-primary" href="/blog/2016/why-i-experiment-every-day">Read More <i class="fa fa-angle-right"></i></a>
+                    </div>
                 </div>
             </div>
             <!-- /.row -->
+
         </div>
+
         <!-- /.container -->
     </section>
 
