--- a/marketing/google-adwords-exam-help.html
+++ b/marketing/google-adwords-exam-help.html
@@ -19,16 +19,16 @@
     <title>Dudon Wai | Google AdWords Exam Help</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
+    <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico?">
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/stylish-portfolio.css" rel="stylesheet">
+    <link href="../css/stylish-portfolio.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -57,16 +57,19 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="/" onclick=$("#menu-close").click();>Dudon Wai</a>
+                <a href="/" onclick=$("#menu-close").click();><strong>Dudon Wai</strong></a>
             </li>
             <li>
-                <a href="/" onclick=$("#menu-close").click();>Home</a>
+                <a href="/" onclick=$("#menu-close").click();><strong>Home</strong></a>
             </li>
             <li>
-                <a href="/#about" onclick=$("#menu-close").click();>About</a>
+                <a href="/#about" onclick=$("#menu-close").click();><strong>About</strong></a>
             </li>
             <li>
-                <a href="/#projects" onclick=$("#menu-close").click();>Projects</a>
+                <a href="/#projects" onclick=$("#menu-close").click();><strong>Projects</strong></a>
+            </li>
+            <li>
+                <a href="/#blog" onclick=$("#menu-close").click();><strong>Blog</strong></a>
             </li>
         </ul>
     </nav>
@@ -1558,10 +1561,10 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="../js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
     <script>
