--- a/artificial-intelligence/artificial-intelligence.html
+++ b/artificial-intelligence/artificial-intelligence.html
@@ -16,16 +16,20 @@
     <meta property="og:url" content="http://www.dudonwai.com/">
     <meta property="og:image" content="http://www.dudonwai.com/img/bg.png">
 
-    <title>Dudon Wai | Machine Learning</title>
+    <title>Dudon Wai | Artificial Intelligence</title>
+
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico?">
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/stylish-portfolio.css" rel="stylesheet">
+    <link href="../css/stylish-portfolio.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -34,6 +38,15 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+          ga('create', 'UA-85617324-1', 'auto');
+          ga('send', 'pageview');
+    </script>
 
 </head>
 
@@ -45,45 +58,50 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#top" onclick=$("#menu-close").click();>Dudon Wai</a>
+                <a href="/" onclick=$("#menu-close").click();><strong>Dudon Wai</strong></a>
             </li>
             <li>
-                <a href="#top" onclick=$("#menu-close").click();>Home</a>
+                <a href="/" onclick=$("#menu-close").click();><strong>Home</strong></a>
             </li>
             <li>
-                <a href="/#about" onclick=$("#menu-close").click();>About</a>
+                <a href="/#about" onclick=$("#menu-close").click();><strong>About</strong></a>
             </li>
             <li>
-                <a href="/#projects" onclick=$("#menu-close").click();>Projects</a>
+                <a href="/#projects" onclick=$("#menu-close").click();><strong>Projects</strong></a>
+            </li>
+            <li>
+                <a href="/#blog" onclick=$("#menu-close").click();><strong>Blog</strong></a>
             </li>
         </ul>
     </nav>
 
+
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Machine Learning</h1>
+            <h1>Artificial Intelligence</h1>
             <h3></h3>
             <br>
-            <a href="#about" class="btn btn-dark btn-lg">My Course Work at Georgia Tech</a>
+            <a href="#about" class="btn btn-dark btn-lg">Learn With Me</a>
         </div>
     </header>
 
-    <!-- About -->
-    <section id="machine-learning" class="about">
+    <!-- Body -->
+    <section id="body" class="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Engineer ~ Programmer ~ Marketer</h2>
+                    <h2>Why Artificial Intelligence?</h2>
+                    <hr class="small">
                     <span><img 
                         class="img-circle"
                         src="img/dudon-wai.jpg"
                         height="250" 
                         width="250">
                         </span>
-                    <h2 class="centered mb">Something about me</h2>
+                    <h2 class="centered mb">Program or Be Programmed</h2>
                     <div class="col-lg-6 col-lg-offset-3">
-                        <p><b>Dudon Wai</b> studied engineering at the University of Waterloo and proceeded to move and work in the oil &amp; gas industry. Passionate about solving complex problems, Dudon executed on <b>$100M+</b> in projects over two years. After an unlikely reunion with a friend, Dudon jumped into web development and started <b>GreyADV</b> in late 2015. In his free time, Dudon seeks new food experiences and enjoys dance music with his girlfriend Deanne. He also supports local Calgary startups and loves meeting like-minded people. Grateful for an amazing community, Dudon makes sure to share what he has learned and pay it forward to other aspiring entrepreneurs.</p>
+                        <p>Artificial intelligence is changing the way we work, play - and ultimately - live. That's why I'm studying artificial intellligence at <strong>Georgia Tech.</strong></p>
                     </div>
                 </div>
             </div>
@@ -92,6 +110,43 @@
         <!-- /.container -->
     </section>
 
+    <!-- Project -->
+    <section id="Project-1" class="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="col-lg-4 text-center">
+                        <h4>PROJECT NAME</h4>
+                        <p class="text-muted">Course Name</p>
+                        <p>Brief description about the problem, conclusions and its practical applications.</p>
+                    </div>
+                    <div class="col-lg-2 text-center">
+                        <span><img 
+                        class="img-circle"
+                        src="img/dudon-wai.jpg"
+                        height="150" 
+                        width="150">
+                        </span>
+                    </div>
+                    <div class="col-lg-2 text-center">
+                        <span><img 
+                        class="img-circle"
+                        src="img/dudon-wai.jpg"
+                        height="150" 
+                        width="150">
+                        </span>
+                    </div>
+                    <div class="col-lg-4 text-center">
+                        <h4>PROJECT NAME</h4>
+                        <p class="text-muted">Course Name</p>
+                        <p>Brief description about the problem, conclusions and its practical applications.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
 
     <!-- Footer -->
     <footer>
@@ -124,10 +179,10 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="../js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
     <script>
