Add blog posts pre-Oct 2016

--- a/index.html
+++ b/index.html
@@ -192,29 +192,145 @@
             <!-- Blog Post Row -->
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
-                    
                     <div class="col-md-2 text-center">
-                        <p><i class="fa fa-camera fa-3x"></i>
+                        <br>
+                        <p><i class="fa fa-flask fa-3x"></i>
                         </p>
-                        <p>July 24, 2016</p>
+                        <p>July 16, 2016</p>
                     </div>
-                    <div class="col-md-4">
-                        <a href="/blog/2016/why-i-experiment-every-day"
-                            <img class="img-responsive img-hover" src="http://placehold.it/600x300" alt="">
+                    <div class="col-md-4 text-center">
+                        <br>
+                        <a href="/blog/2016/why-i-experiment-every-day">
+                            <img class="img-responsive img-hover" src="img/experiment.jpeg" alt="">
                         </a>
                     </div>
                     <div class="col-md-6">
-                        <h3>
+                        <h4>
                             <a href="/blog/2016/why-i-experiment-every-day">Why I Experiment Every Day</a>
-                        </h3>
+                        </h4>
                         <p>via <a href="https://blog.greyadv.com/why-i-experiment-every-day-1f07e33cb872#.97bp39k5e">@dudonwai</a>
                         </p>
                         <p>Every day, I try to find at least three experiments I can do. Will a cold shower in the morning wake me up more than a warm one? Do I eat more in a day if I have a big breakfast or a small one? Do I focus at work better with music or without?</p>
-                        <p>I’ve experimented with many things to do with my diet, fitness, productivity and relationships. I learned that...</p>
                         <a class="btn btn-primary" href="/blog/2016/why-i-experiment-every-day">Read More <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
             </div>
+            <hr class="small">
+            <!-- /.row -->
+
+            <!-- Blog Post Row -->
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <div class="col-md-2 text-center">
+                        <br>
+                        <p><i class="fa fa-edit fa-3x"></i>
+                        </p>
+                        <p>June 15, 2016</p>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <br>
+                        <a href="/blog/2016/meta-blog-1">
+                            <img class="img-responsive img-hover" src="img/meta-blog-1.jpeg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-6">
+                        <h4>
+                            <a href="/blog/2016/meta-blog-1">Meta Blog #1</a>
+                        </h4>
+                        <p>via <a href="https://medium.com/@dudonwai/meta-blog-1-58adaa94ed2e#.wrcee1p8p">@dudonwai</a>
+                        </p>
+                        <p>Yes, this blog is going to be about blogging. I’ve never liked the idea of meta-blogging, as it feels uncreative. But I need to do this for me. And yes, it’s #1 because there may be a #2. I promise I won’t meta-blog often, but it’s as much for me, as it is for the reader as well.</p>
+                        <a class="btn btn-primary" href="/blog/2016/meta-blog-1">Read More <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <hr class="small">
+            <!-- /.row -->
+
+            <!-- Blog Post Row -->
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <div class="col-md-2 text-center">
+                        <br>
+                        <p><i class="fa fa-paper-plane-o fa-3x"></i>
+                        </p>
+                        <p>February 7, 2016</p>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <br>
+                        <a href="/blog/2016/i-am-a-procrastinator">
+                            <img class="img-responsive img-hover" src="img/i-am-a-procrastinator.jpeg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-6">
+                        <h4>
+                            <a href="/blog/2016/i-am-a-procrastinator">I Am A Procrastinator</a>
+                        </h4>
+                        <p>via <a href="https://medium.com/@dudonwai/i-am-a-procrastinator-b0bb50a06ae8#.wso5nvx6u">@dudonwai</a>
+                        </p>
+                        <p>I’m a procrastinator, but I’m not lazy. Procrastination is the delay of doing something you should be doing. Laziness is lacking the effort to do something you have the ability to do. If you’re like me, you have a million things you want to do, but you don’t do most of them...</p>
+                        <a class="btn btn-primary" href="/blog/2016/i-am-a-procrastinator">Read More <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <!-- /.row -->
+
+            <!-- Blog Post Row -->
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <div class="col-md-2 text-center">
+                        <br>
+                        <p><i class="fa fa-line-chart fa-3x"></i>
+                        </p>
+                        <p>January 21, 2016</p>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <br>
+                        <a href="/blog/2016/no-marketing-budget">
+                            <img class="img-responsive img-hover" src="img/no-marketing-budget.jpeg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-6">
+                        <h4>
+                            <a href="/blog/2016/no-marketing-budget">No Marketing Budget</a>
+                        </h4>
+                        <p>via <a href="https://blog.greyadv.com/no-marketing-budget-a6721010fb11#.xyl5ln7sm">@dudonwai</a>
+                        </p>
+                        <p>It’s the start of 2016, and by now you have an idea of how much you can spend this year on attracting new customers and growing your business. In this brief post, I’ll discuss a few options you have for growing your business, at little to no cost!</p>
+                        <a class="btn btn-primary" href="/blog/2016/no-marketing-budget">Read More <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <hr class="small">
+            <!-- /.row -->
+
+            <!-- Blog Post Row -->
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <div class="col-md-2 text-center">
+                        <br>
+                        <p><i class="fa fa-desktop fa-3x"></i>
+                        </p>
+                        <p>January 9, 2016</p>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <br>
+                        <a href="/blog/2016/8-reasons-you-need-a-website">
+                            <img class="img-responsive img-hover" src="img/8-reasons-you-need-a-website.jpeg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-6">
+                        <h4>
+                            <a href="/blog/2016/8-reasons-you-need-a-website">8 Reasons You Need A Website</a>
+                        </h4>
+                        <p>via <a href="https://medium.com/@dudonwai/meta-blog-1-58adaa94ed2e#.wrcee1p8p">@dudonwai</a>
+                        </p>
+                        <p>It’s easy to think that you DON’T NEED a website, or that your website is GOOD ENOUGH. No matter what size your business is, your website is your greatest tool for growing your business. Here’s 8 reasons your website needs to be GREAT.</p>
+                        <a class="btn btn-primary" href="/blog/2016/8-reasons-you-need-a-website">Read More <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <hr class="small">
             <!-- /.row -->
 
         </div>
