--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     <div class="col-md-4 text-center">
                         <br>
                         <a href="/blog/2016/meta-blog-1">
-                            <img class="img-responsive img-hover" src="img/meta-blog-1.jpeg" alt="">
+                            <img class="img-responsive img-hover" src="img/meta-blog-1.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-md-6">
@@ -259,7 +259,7 @@
                     <div class="col-md-4 text-center">
                         <br>
                         <a href="/blog/2016/i-am-a-procrastinator">
-                            <img class="img-responsive img-hover" src="img/i-am-a-procrastinator.jpeg" alt="">
+                            <img class="img-responsive img-hover" src="img/i-am-a-procrastinator.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-md-6">
@@ -287,7 +287,7 @@
                     <div class="col-md-4 text-center">
                         <br>
                         <a href="/blog/2016/no-marketing-budget">
-                            <img class="img-responsive img-hover" src="img/no-marketing-budget.jpeg" alt="">
+                            <img class="img-responsive img-hover" src="img/no-marketing-budget.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-md-6">
@@ -316,7 +316,7 @@
                     <div class="col-md-4 text-center">
                         <br>
                         <a href="/blog/2016/8-reasons-you-need-a-website">
-                            <img class="img-responsive img-hover" src="img/8-reasons-you-need-a-website.jpeg" alt="">
+                            <img class="img-responsive img-hover" src="img/8-reasons-you-need-a-website.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-md-6">
