--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     <div class="col-md-4 text-center">
                         <br>
                         <a href="/blog/2016/why-i-experiment-every-day">
-                            <img class="img-responsive img-hover" src="img/experiment.jpeg" alt="">
+                            <img class="img-responsive img-hover" src="img/why-i-experiment-every-day.jpeg" alt="">
                         </a>
                     </div>
                     <div class="col-md-6">
@@ -215,7 +215,7 @@
                     </div>
                 </div>
             </div>
-            <hr class="small">
+            <hr>
             <!-- /.row -->
 
             <!-- Blog Post Row -->
@@ -244,7 +244,7 @@
                     </div>
                 </div>
             </div>
-            <hr class="small">
+            <hr>
             <!-- /.row -->
 
             <!-- Blog Post Row -->
@@ -272,7 +272,7 @@
                         <a class="btn btn-primary" href="/blog/2016/i-am-a-procrastinator">Read More <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
-            </div>
+            <hr>
             <!-- /.row -->
 
             <!-- Blog Post Row -->
@@ -301,7 +301,7 @@
                     </div>
                 </div>
             </div>
-            <hr class="small">
+            <hr>
             <!-- /.row -->
 
             <!-- Blog Post Row -->
@@ -330,7 +330,7 @@
                     </div>
                 </div>
             </div>
-            <hr class="small">
+            <hr>
             <!-- /.row -->
 
         </div>
