Edit Adwords, AI

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                     <strong>Artificial Intelligence</strong>
                                 </h4>
                                 <p>Program or be programmed. My journey at Georgia Tech to become a technical programmer in AI.</p>
-                                <a href="404" class="btn btn-light">Learn More</a>
+                                <a href="ai/artificial-intelligence" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -165,7 +165,7 @@
                                     <strong>Dota Stats</strong>
                                 </h4>
                                 <p>A little project to leverage gaming statistical data and present insights and rich visuals.</p>
-                                <a href="404" class="btn btn-light">Learn More</a>
+                                <a href="http://dudonwai.github.io/dota-stats" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                     </div>
