--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <h2>Projects</h2>
                     <hr class="small">
                     <div class="row">
-                        <div class="col-md-3 col-sm-6">
+                        <div class="col-md-4 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -129,7 +129,7 @@
                                 <a href="http://www.greyadv.com/" target="_blank" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
-                        <div class="col-md-3 col-sm-6">
+                        <div class="col-md-4 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -142,7 +142,7 @@
                                 <a href="/marketing/google-adwords-exam-help" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
-                        <div class="col-md-3 col-sm-6">
+                        <div class="col-md-4 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -155,7 +155,8 @@
                                 <a href="ai/artificial-intelligence" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
-                        <div class="col-md-3 col-sm-6">
+                        
+                        <!-- <div class="col-md-4 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -167,7 +168,8 @@
                                 <p>A little project to leverage gaming statistical data and present insights and rich visuals.</p>
                                 <a href="http://dudonwai.github.io/dota-stats" class="btn btn-light">Learn More</a>
                             </div>
-                        </div>
+                        </div> -->
+                        
                     </div>
                     <!-- /.row (nested) -->
                 </div>
