--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <div class="col-md-4 text-center">
                         <br>
                         <a href="/blog/2016/why-i-experiment-every-day">
-                            <img src="img/why-i-experiment-every-day.jpeg" alt="">
+                            <img class="img-responsive" src="img/why-i-experiment-every-day.jpeg" alt="">
                         </a>
                     </div>
                     <div class="col-md-6">
@@ -261,7 +261,7 @@
                     <div class="col-md-4 text-center">
                         <br>
                         <a href="/blog/2016/i-am-a-procrastinator">
-                            <img class="img-responsive img-hover" src="img/i-am-a-procrastinator.jpg" alt="">
+                            <img class="img-responsive" src="img/i-am-a-procrastinator.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-md-6">
