Edit CSS file in body{} to fix mobile view

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <div class="col-md-4 text-center">
                         <br>
                         <a href="/blog/2016/why-i-experiment-every-day">
-                            <img class="img-responsive" src="img/why-i-experiment-every-day.jpeg" alt="">
+                            <img class="img-portfolio img-responsive" src="img/why-i-experiment-every-day.jpeg" alt="">
                         </a>
                     </div>
                     <div class="col-md-6">
@@ -232,7 +232,7 @@
                     <div class="col-md-4 text-center">
                         <br>
                         <a href="/blog/2016/meta-blog-1">
-                            <img class="img-responsive img-hover" src="img/meta-blog-1.jpg" alt="">
+                            <img class="img-portfolio img-responsive" src="img/meta-blog-1.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-md-6">
@@ -261,7 +261,7 @@
                     <div class="col-md-4 text-center">
                         <br>
                         <a href="/blog/2016/i-am-a-procrastinator">
-                            <img class="img-responsive" src="img/i-am-a-procrastinator.jpg" alt="">
+                            <img class="img-portfolio img-responsive" src="img/i-am-a-procrastinator.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-md-6">
@@ -289,7 +289,7 @@
                     <div class="col-md-4 text-center">
                         <br>
                         <a href="/blog/2016/no-marketing-budget">
-                            <img class="img-responsive img-hover" src="img/no-marketing-budget.jpg" alt="">
+                            <img class="img-portfolio img-responsive" src="img/no-marketing-budget.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-md-6">
@@ -318,7 +318,7 @@
                     <div class="col-md-4 text-center">
                         <br>
                         <a href="/blog/2016/8-reasons-you-need-a-website">
-                            <img class="img-responsive img-hover" src="img/8-reasons-you-need-a-website.jpg" alt="">
+                            <img class="img-portfolio img-responsive" src="img/8-reasons-you-need-a-website.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-md-6">
