Edit CSS file in body{} to fix mobile view

--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#top" onclick=$("#menu-close").click();><strong>Dudon Wai</strong></a>
+                <a href="/#top" onclick=$("#menu-close").click();><strong>Dudon Wai</strong></a>
             </li>
             <li>
-                <a href="#top" onclick=$("#menu-close").click();><strong>Home</strong></a>
+                <a href="/#top" onclick=$("#menu-close").click();><strong>Home</strong></a>
             </li>
             <li>
-                <a href="#about" onclick=$("#menu-close").click();><strong>About</strong></a>
+                <a href="/#about" onclick=$("#menu-close").click();><strong>About</strong></a>
             </li>
             <li>
-                <a href="#projects" onclick=$("#menu-close").click();><strong>Projects</strong></a>
+                <a href="/#projects" onclick=$("#menu-close").click();><strong>Projects</strong></a>
             </li>
             <li>
-                <a href="#blog" onclick=$("#menu-close").click();><strong>Blog</strong></a>
+                <a href="/#blog" onclick=$("#menu-close").click();><strong>Blog</strong></a>
             </li>
         </ul>
     </nav>
