Edit CSS file in body{} to fix mobile view

--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="/#top" onclick=$("#menu-close").click();><strong>Dudon Wai</strong></a>
+                <a href="#top" onclick=$("#menu-close").click();><strong>Dudon Wai</strong></a>
             </li>
             <li>
-                <a href="/#top" onclick=$("#menu-close").click();><strong>Home</strong></a>
+                <a href="#top" onclick=$("#menu-close").click();><strong>Home</strong></a>
             </li>
             <li>
-                <a href="/#about" onclick=$("#menu-close").click();><strong>About</strong></a>
+                <a href="#about" onclick=$("#menu-close").click();><strong>About</strong></a>
             </li>
             <li>
-                <a href="/#projects" onclick=$("#menu-close").click();><strong>Projects</strong></a>
+                <a href="#projects" onclick=$("#menu-close").click();><strong>Projects</strong></a>
             </li>
             <li>
-                <a href="/#blog" onclick=$("#menu-close").click();><strong>Blog</strong></a>
+                <a href="#blog" onclick=$("#menu-close").click();><strong>Blog</strong></a>
             </li>
         </ul>
     </nav>
@@ -156,7 +156,7 @@
                             </div>
                         </div>
                         
-                        <!-- <div class="col-md-4 col-sm-6">
+                        <div class="col-md-4 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -166,9 +166,9 @@
                                     <strong>Dota Stats</strong>
                                 </h4>
                                 <p>A little project to leverage gaming statistical data and present insights and rich visuals.</p>
-                                <a href="http://dudonwai.github.io/dota-stats" class="btn btn-light">Learn More</a>
+                                <a href="404" class="btn btn-light">Learn More</a>
                             </div>
-                        </div> -->
+                        </div>
                         
                     </div>
                     <!-- /.row (nested) -->
