--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                             </div>
                         </div>
                         
-                        <div class="col-md-4 col-sm-6">
+<!--                         <div class="col-md-4 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -168,7 +168,7 @@
                                 <p>A little project to leverage gaming statistical data and present insights and rich visuals.</p>
                                 <a href="404" class="btn btn-light">Learn More</a>
                             </div>
-                        </div>
+                        </div> -->
                         
                     </div>
                     <!-- /.row (nested) -->
